--- a/veeam_test/CMakeLists.txt
+++ b/veeam_test/CMakeLists.txt
@@ -3,7 +3,10 @@
 #
 cmake_minimum_required (VERSION 3.8)
 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 # Add source to this project's executable.
-add_executable (CMakeTarget "veeam_test.cpp" "veeam_test.h" "generator.h")
+add_executable (veeam_test "veeam_test.cpp" "veeam_test.h")
 
 # TODO: Add tests and install targets if needed.
