--- a/veeam_test/CMakeLists.txt
+++ b/veeam_test/CMakeLists.txt
@@ -1,12 +1,18 @@
-﻿# CMakeList.txt : CMake project for Veeam Test Task, include source and define
-# project specific logic here.
-#
-cmake_minimum_required (VERSION 3.8)
+﻿cmake_minimum_required (VERSION 3.10)
+
+include($ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Add source to this project's executable.
-add_executable (veeam_test "veeam_test.cpp" "veeam_test.h")
+set(Boost_USE_STATIC_LIBS ON)
+set(Boost_USE_MULTITHREADED ON)
+find_package(Boost)
 
-# TODO: Add tests and install targets if needed.
+include_directories(${Boost_INCLUDE_DIRS})
+
+add_executable (veeam_test "veeam_test.cpp" )
+
+target_link_libraries(veeam_test ${Boost_LIBRARIES})
+
+
